* 2013-05-22 - marc.arens@open-xchange.com

 - Fix for bug 26580: Remove superfluous warning

* 2013-05-21 - marcus.klein@open-xchange.com

 - Fix for bug 26680: Moved filemanagement bundles into an own package open-xchange-file-distribution.
 
 * 2013-05-17 - marc.arens@open-xchange.com

 - Fix for bug 26226: Use concurrent data structures to prevent NegativeArraySizeException
 - Fix for bug 25944: GETS are now periodically closed by server pongs

* 2013-05-16 - marcus.klein@open-xchange.com

 - Fix for bug 26085: Disabling push UDP bundle by setting all push UDP related enabling properties to false.

* 2013-05-16 - thorben.betten@open-xchange.com

 - Fix for bug 26611: Sanitize masked/commented HTML tags
 - Fix for bug 26648: User concurrent-capable List/SortedSet to support concurrent accesses without throwing ConcurrentModificationException

* 2013-05-15 - marcus.klein@open-xchange.com

 - Fix for bug 26179: Removed configuration file for audit extension and placed it as example in the packages documentation.

* 2013-05-15 - martin.herfurth@open-xchange.com

 - Fix for bug 25985: Task config mapping for jslob interface.

* 2013-05-15 - thorben.betten@open-xchange.com

 - Fix for bug 26162: Check for intermediately removed file prior to opening a FileInputStream to it
 - Fix for bug 26102: Accept "application/ics" when checking for an iCal attachment

* 2013-05-14 - marcus.klein@open-xchange.com

 - Fix for bug 26170: Renamed App Suite calendar printing templates again according to the required naming scheme.

* 2013-05-14 - thorben.betten@open-xchange.com

 - Fix for bug 26501: Return an empty JSON object to indicate successful delete operation
 - Fix for bug 26565: Check for possible null message while logging
 - Fix for bug 26577: Iterate over a snapshot, not the (possibly concurrently modified) collection itself
 - Fix for bug 26317: Treat "text/comma-separated-values" part like a binary one

* 2013-05-13 - dennis.sieben@open-xchange.com
