@@ -8,3 +8,10 @@ Open-Xchange {
  storeKey=true
  useTicketCache=true;
 };
+Open-Xchange-User-Auth {
+ com.sun.security.auth.module.Krb5LoginModule required
+ debug=true
+ useKeyTab=false
+ doNotPrompt=false
+ useTicketCache=false
+};
