@@ -1,7 +1,7 @@
 # This files configures the Kerberos authentication bundle.
 
-# Name of the module in the authentication and authorization configuration file. Must be an entry in the file named by
-# java.security.auth.login.config.
+# Name of the module in the authentication and authorization configuration file.
+# Must be an entry in the file named by java.security.auth.login.config
 com.openexchange.kerberos.moduleName=Open-Xchange
 
 # Name of the module in the authentication and authorization configuration file used for username and password authentication. Must be an
@@ -18,11 +18,11 @@ com.openexchange.kerberos.proxyDelimiter=+
 com.openexchange.kerberos.proxyUser=
 
 # path to the Java authentication and authorization configuration file
-java.security.auth.login.config=/opt/open-xchange/etc/kerberosLogin.conf
+java.security.auth.login.config=/home/marcus/eclipse/kerberos/open-xchange-development/tmp/kerberosLogin.conf
 
 # enable kerberos debugging
 sun.security.krb5.debug=true
 
 # path to the krb5.conf configuration file
 !java.security.krb5.conf=/etc/krb5.conf
-java.security.krb5.conf=/opt/open-xchange/etc/krb5.conf
+java.security.krb5.conf=/home/marcus/eclipse/kerberos/open-xchange-development/tmp/krb5.conf
