@@ -1,0 +1,41 @@
+Open-Xchange {
+ com.sun.security.auth.module.Krb5LoginModule required
+ principal="HTTP/ox.open-xchange.local@OPEN-XCHANGE.LOCAL"
+ debug=true
+ useKeyTab=true
+ keyTab="/home/marcus/eclipse/backend/backend/open-xchange-development/tmp/marcus-ads.keytab"
+ doNotPrompt=true
+ storeKey=true
+ useTicketCache=true;
+};
+Open-Xchange-User-Auth {
+ com.sun.security.auth.module.Krb5LoginModule required
+ debug=true
+ useKeyTab=false
+ doNotPrompt=false
+ useTicketCache=false
+};
+Novell {
+ com.sun.security.auth.module.Krb5LoginModule required
+ principal="HTTP/marcus.oes11qa.local@OES11QA.LOCAL
+ debug=true
+ useKeyTab=true
+ keyTab="/home/marcus/eclipse/backend/backend/open-xchange-development/tmp/marcus-oes.keytab"
+ doNotPrompt=true
+ storeKey=true
+ useTicketCache=true;
+};
+imapusr {
+ com.sun.security.auth.module.Krb5LoginModule required
+ debug=true
+ useKeyTab=false
+ storeKey=true
+ useTicketCache=false;
+};
+com.sun.security.jgss.initiate {
+ com.sun.security.auth.module.Krb5LoginModule required
+ debug=false
+ useKeyTab=false
+ useTicketCache=false
+ doNotPrompt=true;
+};
