@@ -1,0 +1,12 @@
+[libdefaults]
+    default_realm = OPEN-XCHANGE.LOCAL
+
+[realms]
+    OPEN-XCHANGE.LOCAL = {
+        kdc = 10.20.30.95
+        default_domain = open-xchange.local
+        admin_server = 10.20.30.95
+    }
+
+[domain_realm]
+    .open-xchange.local = OPEN-XCHANGE.LOCAL
